roles/openshift_cluster_postinstall/templates/prometheus-k8s-custom-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-k8s-custom
  namespace: openshift-monitoring
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-k8s
